fixed: change nav back to root To previous

--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -35,7 +35,7 @@
         <!--<dxwui:WinUIMessageBoxService/>-->
         <dxmvvm:NotificationService x:Name="AppNotificationService" UseWin8NotificationsIfAvailable="False" PredefinedNotificationDuration="Long" PredefinedNotificationTemplate="ShortHeaderAndTwoTextFields"   />
         <dxmvvm:DispatcherService />
-        <navigation:FrameNavigationService Frame="{Binding ElementName=frame}" />
+        <navigation:FrameNavigationService Frame="{Binding ElementName=frame}"  />
         <dx:DXSplashScreenService SplashScreenType="{x:Type View:LoadingWindow}" />
     </dxmvvm:Interaction.Behaviors>
     <Grid>
@@ -43,7 +43,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <dxwui:NavigationFrame Grid.Row="1"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" />
+        <dxwui:NavigationFrame Grid.Row="1"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="PreviousScreen" />
     </Grid>
 
 </dx:DXWindow>
