--- a/HmiPro/Views/DMes/DMesManuView.xaml
+++ b/HmiPro/Views/DMes/DMesManuView.xaml
@@ -13,18 +13,21 @@
              xmlns:Model="clr-namespace:HmiPro.ViewModels.DMes.Tab"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:mqModels="clr-namespace:HmiPro.Redux.Models"
+             xmlns:generic="clr-namespace:System.Collections.Generic;assembly=mscorlib"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
              DataContext="{dxmvvm:ViewModelSource Type=dMes:DMesManuViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <converts:CoefConverter x:Key="ConverterCoef"/>
+        <converts:MultiParamsConvert x:Key="MultiParamsConvert"></converts:MultiParamsConvert>
     </UserControl.Resources>
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:DispatcherService />
         <dxmvvm:EventToCommand EventName="Loaded" Command="{Binding OnLoadedCommand}"/>
         <dxmvvm:EventToCommand EventName="ContentRendered" Command="{Binding OnContentRenderedCommand}"/>
     </dxmvvm:Interaction.Behaviors>
-    <dxwui:PageAdornerControl  Header="DMes 系统 v3.0.0" ShowBackButton="True">
+    <dxwui:PageAdornerControl  Header="DMes 系统 v3.0.0" ShowBackButton="True" BackCommand="{Binding GoBackCommand}">
         <Grid Height="Auto" x:Name="TopGird">
             <Grid.Resources>
                 <DataTemplate x:Key="TabHeader">
@@ -86,6 +89,15 @@
                                                         Content="详细"
                                                         Command="{x:Static materialDesign:Flipper.FlipCommand}"
                                                         Style="{StaticResource MaterialDesignToolForegroundButton}"/>
+
+                                                            <Button Content="Bom" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl},Path=DataContext.NavigateToBomViewCommand}">
+                                                                <Button.CommandParameter >
+                                                                    <MultiBinding Converter="{StaticResource MultiParamsConvert}">
+                                                                        <Binding Path="maccode"></Binding>
+                                                                        <Binding Path="workcode"></Binding>
+                                                                    </MultiBinding>
+                                                                </Button.CommandParameter>
+                                                            </Button>
                                                         </StackPanel>
                                                     </StackPanel>
                                                 </materialDesign:Card>
@@ -139,6 +151,28 @@
                                             </Grid>
                                         </materialDesign:Flipper.BackContent>
                                     </materialDesign:Flipper>
+                                </DataTemplate>
+                            </dxlc:FlowLayoutControl.ItemTemplate>
+                        </dxlc:FlowLayoutControl>
+                    </DataTemplate>
+
+                    <DataTemplate DataType="{x:Type Model:BomTab}">
+                        <dxlc:FlowLayoutControl ItemsSource="{Binding Path=Boms}"  Orientation="Vertical"  ShowLayerSeparators="True">
+                            <dxlc:FlowLayoutControl.ItemTemplate>
+                                <DataTemplate>
+                                    <dxlc:FlowLayoutControl ItemsSource="{Binding Path=TaskBoms}" Orientation="Vertical" BreakFlowToFit="True" >
+                                        <dxlc:FlowLayoutControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock  Style="{StaticResource CpmInstantName}" MinWidth="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}},Path=ActualWidth,
+                                Converter={StaticResource ConverterCoef},ConverterParameter=0.30
+                                }">
+                                                    <Run Text="{Binding Path=Key.Name,Mode=OneWay}"/>
+                                                    <Run Text=":" />
+                                                    <Run  Text="{Binding Path=Value,Mode=OneWay}"  Style="{StaticResource CpmInstantValue}"/>
+                                                </TextBlock>
+                                            </DataTemplate>
+                                        </dxlc:FlowLayoutControl.ItemTemplate>
+                                    </dxlc:FlowLayoutControl>
                                 </DataTemplate>
                             </dxlc:FlowLayoutControl.ItemTemplate>
                         </dxlc:FlowLayoutControl>
